# gidari

./: .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  LICENSE  Makefile  NOTICE  README.md  WORKSPACE  config.go  config_test.go  decode.go  decode_test.go  deps.bzl  doc.go  docker-compose.yml  errors.go  flattened_request.go  gidari.go  gidari_example_test.go  gidari_test.go  go.mod  go.sum  http.go  http_test.go  iterator.go  iterator_test.go  meta.docker-compose.yaml  mock_test.go  service.go  socket.go  socket_test.go  token.json  transport.go  transport_test.go  version.go  ~
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  go.yml  golangci-lint.yml
auth/: auth.go  auth_test.go
cmd/: .gitignore  alpinist.go  bash-completion.sh  cmd  gidari.go  sherpa.go
cmd/gidari/: cmd.go  go.mod  go.sum  main.go
cmd/gidari/cmd/: root.go
cmd/gidari/config/: config.go  config_test.go
config/: config.go  rate_limit_config.go  rate_limit_config_test.go  request.go
data/option/: BUILD.bazel  database.go
data/proto/: db.pb.go
data/repository/: coinbasepro.go  integration_test.go  polygon.go  storage.go
data/storage/: storage.go  storage_test.go
docker/: cmd.Dockerfile  e2e.Dockerfile  examples.Dockerfile  fmt.Dockerfile  integration.Dockerfile  lint.Dockerfile  postgres.Dockerfile  protec-gen.Dockerfile
docs/: CONTRIBUTING.md  development.md  release_process.md  resources.md  scalar.md
e2e/: go.mod  go.sum  storage1_test.go  storage_test.go  transport_test.go
e2e/testdata/upsert/: earthquake.yml  histam.yml  invalid_json_response.yml  open_library.yml  pokemon.yml  public.yml  zippopotam.yml  zippopotam_truncate_req.yml
examples/csvpb/: go.mod  go.sum  main.go
examples/iterator/: go.mod  go.sum  main.go
examples/mongodb/: go.mod  go.sum  main.go
examples/mongopb/: go.mod  go.sum  main.go
examples/repository/: DBStructure.md  example_test.go  go.mod  go.sum
examples/websocket/: go.mod  go.sum  main.go
internal/: BUILD.bazel  http.go  storage.go
internal/auth/: api_key.go  auth1.go  basic.go  round_tripper.go
internal/csv/: csv.go  csv_integration_test.go  csv_test.go  myfile
internal/csv/testdata/: test.csv
internal/decode/: accept.go  accept_test.go  decode.go  decode_test.go
internal/mongo/: mongo.go  mongo_integration_test.go  mongo_test.go
internal/postgres/: postgres.go  postgres_integration_test.go  postgres_test.go  queries.go
internal/postgres/queries/: create_tables.sql  garbage_collect.sql  truncate_tables.sql
internal/proto/: db.pb.go  db.proto  records.go  records_test.go  storage.go  test_runner.go  transaction.go
internal/query/: coinbasepro_candle_minutes.go  polygon_bar_minutes.go  queries.go  read_builder.go
internal/repository/: example_test.go  generic.go
internal/serial/: BUILD.bazel  json.go  transform.go
internal/storage/: mongo.go  mongo_test.go  postgres.go  postgres_test.go  queries.go  storage.go  storage_test.go  tx.go
internal/storage/queries/: pg_columns.sql  pg_garbage_collect.sql  pg_tables.sql  pg_truncate_tables.sql
internal/transport/: cbp_encoder.go  config.go  errors.go  example_test.go  job.go  repo.go  repository_encoder.go  repository_encoder_test.go  request.go  timeseries.go  transport.go  transport_test.go
internal/transport/fixtures/: cbp_accounts.yml
internal/web/: client.go  client_test.go  example_test.go
internal/web/auth/: api_key.go  auth1.go  (+5 more)
pkg/config/: config.go  errors.go  request.go  timeseries.go
pkg/gidari/: transport.go
pkg/proto/: db.pb.go  db.proto
pkg/repository/: example_test.go  generic.go  raw.go  raw_test.go  storage.go  web_integration_test.go
pkg/storage/: storage.go
proto/: db.pb.go  db.proto  decode.go  decode_test.go  records.go  records_test.go  storage.go  test_runner.go  transaction.go
repository/: coinbasepro.go  example_test.go  generic.go  storage.go  web_integration_test.go
scripts/: add-license.sh  build-migrations.sh  build-storage.sh  build_bazel.sh  build_meta.sh  fmt-pkgs.sh  fmt.sh  lint-fix.sh  lint.sh  list-pkgs.sh  list_pkgs.sh  pg_create_tables.sql  rs-init.sh  run-ci-tests.sh  run-cmd-tests.sh  run-ctests.sh  run-e2e-tests.sh  run-examples.sh  run-integration-tests.sh  update-etc-hosts.sh  wait-for-mongodb.sh
scripts/meta/: Gemfile  comment.rb  const.rb  endpoint.rb  enum.rb  field.rb  generate.Dockerfile  generate.rb  go_client.rb  go_http.rb  go_struct.rb  goimports.Dockerfile  inflector.rb  model_unmarshaler.rb  model_writer.rb  option.rb  path.rb  path_part.rb  path_writer.rb  ratelimiter.rb  ratelimiter_writer.rb  scheme.rb  setters.rb  types.rb  types_writer.rb
tools/: BUILD.bazel  bool.go  gateway.go  gateway_test.go  generic_storage.go  http_message.go  http_message_test.go  log_formatter.go  log_formatter_test.go  quiet.go  records.go  records_test.go  sql.go  sql_test.go  uri.go  uri_test.go
transport/: transport.go
transport/option/: coinbasepro_candles.go
transport/populate/: .gitignore  coinbasepro_candles.go  log.go
version/: version.go
web/: client.go  example_test.go
web/auth/: BUILD.bazel  auth1.go
web/coinbasepro/: .gitignore  BUILD.bazel  README.md  async_ticker.go  async_ticker_test.go  client.go  example_test.go  http.go  models.go  options.go  path.go  ratelimiter.go  stress_test.go  types.go  websocket.go
web/morningstar/: BUILD.bazel  client.go  example_test.go  models.go  options.go  path.go  ratelimiter.go
web/polygon/: .gitignore  BUILD.bazel  README.md  client.go  example_test.go  http.go  models.go  options.go  path.go  ratelimiter.go  types.go
web/transport/: BUILD.bazel  README.md  api_key.go  auth1.go  auth2.go  basic.go  const.go  transport.go
web/twitter/: .gitignore  BUILD.bazel  README.md  client.go  example_test.go  http.go  models.go  options.go  path.go  ratelimiter.go  types.go
web/websocket/: BUILD.bazel  channel.go  connector.go  message.go  mock.go  websocket.go
x/cmd/: sherpa.go
x/repository/: coinbasepro.go  web_integration_test.go
x/transport/: transport.go
x/web/: example_test.go
(+120 files in other folders)
