load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transport",
    srcs = [
        "api_key.go",
        "auth1.go",
        "auth2.go",
        "basic.go",
        "const.go",
        "transport.go",
    ],
    importpath = "github.com/alpine-hodler/web/pkg/transport",
    visibility = ["//visibility:public"],
)
