load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coinbasepro",
    srcs = [
        "async_ticker.go",
        "client.go",
        "http.go",
        "models.go",
        "options.go",
        "path.go",
        "ratelimiter.go",
        "types.go",
        "websocket.go",
    ],
    importpath = "github.com/alpine-hodler/driver/web/coinbasepro",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alpine_hodler_web//internal:go_default_library",
        "@com_github_alpine_hodler_web//internal/serial:go_default_library",
        "@com_github_alpine_hodler_web//pkg/transport:go_default_library",
        "@com_github_alpine_hodler_web//pkg/websocket:go_default_library",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "coinbasepro_test",
    srcs = [
        "async_ticker_test.go",
        "example_test.go",
        "stress_test.go",
    ],
    embed = [":coinbasepro"],
    deps = [
        "@com_github_alpine_hodler_web//pkg/coinbasepro:go_default_library",
        "@com_github_alpine_hodler_web//pkg/transport:go_default_library",
        "@com_github_alpine_hodler_web//pkg/websocket:go_default_library",
        "@com_github_alpine_hodler_web//tools:go_default_library",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_stretchr_testify//require",
    ],
)
