load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coinbasepro",
    srcs = [
        "async_ticker.go",
        "client.go",
        "http.go",
        "models.go",
        "options.go",
        "path.go",
        "ratelimiter.go",
        "types.go",
        "websocket.go",
    ],
    importpath = "github.com/alpine-hodler/driver/web/coinbasepro",
    visibility = ["//visibility:public"],
    deps = [
        "//internal",
        "//internal/serial",
        "//web/transport",
        "//web/websocket",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "coinbasepro_test",
    timeout = "short",
    srcs = [
        "async_ticker_test.go",
        "example_test.go",
        "stress_test.go",
    ],
    data = glob([".simple-test.env"]),
    embed = [":coinbasepro"],
    deps = [
        "//tools",
        "//web/transport",
        "//web/websocket",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_stretchr_testify//require",
    ],
)
