load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "polygon",
    srcs = [
        "client.go",
        "http.go",
        "models.go",
        "options.go",
        "path.go",
        "ratelimiter.go",
        "types.go",
    ],
    importpath = "github.com/alpine-hodler/driver/web/polygon",
    visibility = ["//visibility:public"],
    deps = [
        "//internal",
        "//web/transport",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "polygon_test",
    timeout = "short",
    srcs = ["example_test.go"],
    data = glob([".test.env"]),
    deps = [
        ":polygon",
        "//tools",
        "//web/transport",
        "@com_github_joho_godotenv//:godotenv",
    ],
)
