load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "twitter",
    srcs = [
        "client.go",
        "http.go",
        "models.go",
        "options.go",
        "path.go",
        "ratelimiter.go",
        "types.go",
    ],
    importpath = "github.com/alpine-hodler/driver/web/twitter",
    visibility = ["//visibility:public"],
    deps = [
        "//internal",
        "//web/transport",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "twitter_test",
    timeout = "short",
    srcs = ["example_test.go"],
    data = glob([
        ".simple-test.env",
        ".test.env",
        "refresh_token.json",
    ]),
    deps = [
        ":twitter",
        "//tools",
        "//web/transport",
        "@com_github_joho_godotenv//:godotenv",
    ],
)
